# milvus-sdk-rust

./: .gitignore  Cargo.toml  build.rs  docker-compose.yml
configs/: user.yaml
examples/: collection.rs  index_example.rs  iterator.rs  query_search.rs
src/: authentication.rs  client.rs  collection.rs  data.rs  database.rs  error.rs  iterator.rs  lib.rs  mutate.rs  query.rs  resource_group.rs  schema.rs  sparse.rs  value.rs
src/index/: mod.rs
src/proto/: milvus.proto.milvus.rs  milvus.proto.msg.rs
tests/: collection.rs
tests/aggressivehpctesting/: phase_1_crud_and_indexing.rs  phase_2_search_and_query.rs
tests/common/: mod.rs
tests/testsoutsideoftestsuite/: partition_drop_partition.rs
